# libbayer

./: Cargo.toml
benches/: benches.rs
examples/: showbayer.rs  writebayer.rs
src/: ffi.rs  lib.rs  raster.rs
src/demosaic/: cubic.rs
