[package]
name = "bayer"
version = "0.2.0"
edition = "2021"
authors = ["David Wang <millimillenary@gmail.com>"]
homepage = "https://github.com/wangds/libbayer.git"
repository = "https://github.com/wangds/libbayer.git"
documentation = "https://docs.rs/bayer/"
description = "Algorithms for demosaicing Bayer images."
license = "MIT"
readme = "README.md"
keywords = ["bayer", "cfa", "demosaic"]
categories = ["multimedia::images"]

[lib]
name = "bayer"
crate-type = ["rlib", "dylib"]
test = true
doctest = true
doc = true

[features]
default = ["rayon"]

[dependencies]
byteorder = "1.5"
libc = "0.2"
rayon = { version = "1.10", optional = true }
quick-error = "2.0"

[dev-dependencies]
flic = "0.1"
sdl2 = { version = "0.37", features = ["image"] }
